# centinela

./: .gitignore  .gitlab-ci.yml  Cargo.toml
.github/workflows/: build.yml  cleanup-containers-after-pr-merge.yml
documentation/: build_potato_docs  conf.py  index.rst
documentation/src/: data_file.rst  http_api.rst  overview_of_centinela_production_config.rst
src/: api.rs  config.rs  core.rs  data.rs  fileset.rs  main.rs  monitor.rs  notifier.rs  notifiers.rs
