[package]
name = "centinela"
version = "0.1.0"
authors = ["Tolan Blundell <tolan@patternseek.net>"]
edition = "2021"

[dependencies]
async-trait = "0.1.63"
linemux = "0.3.0"
tokio = { version = "1.24", features = ["full","tracing"] }
console-subscriber = "0.1"
actix-web = "4"
#parking_lot = { version = "0.12.0", features = ["serde"] }
regex = "1.4.4"
futures = "0.3"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive","rc"] }
serde_regex = "1.1"
serde_yaml = "0.9"
serde_json = "1.0"
log = "0.4.14"
chrono = { version = "0.4.19", features = ["serde"] }
url = { version = "2.2.1", features = ["serde"] }
maplit = "1.0.2"
reqwest = { version = "0.11", features = ["blocking"] }
structopt = "0.3.21"
structopt-derive = "0.4.14"
openssl = {version = "0.10", features = ["vendored"]}